@@ -264,6 +264,7 @@ extern PyTypeObject InputFaderType;
 extern PyTypeObject HarmTableType;
 extern PyTypeObject ChebyTableType;
 extern PyTypeObject HannTableType;
+extern PyTypeObject WinTableType;
 extern PyTypeObject ParaTableType;
 extern PyTypeObject LinTableType;
 extern PyTypeObject CosTableType;
